submit week 3 test

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-     Soon
+        <div class="container">
+            <div class="ordered-image teal">
+                <img src="./img/cc-apple-pay-brands.svg" alt="Apple image">
+                <span class="teal">1</span>
+            </div>
+            <h1 style="color:#70C0C9 ;">Client kickoff</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet molestias, dolorum similique reprehenderit laborum rem porro eligendi sequi, ullam fugit saepe dignissimos consequuntur! Corrupti, inventore. </p>
+        </div>
+        <div class="container">
+            <div class="ordered-image blue">
+                <img src="./img/random-solid.svg" alt="Rodykles">
+                <span class="blue">2</span>
+            </div>
+            <h1 style="color:#4074BD ;">Messaging development</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet molestias, dolorum similique reprehenderit laborum rem porro eligendi sequi, ullam fugit saepe dignissimos consequuntur! Corrupti, inventore. </p>
+        </div>
+        <div class="container">
+            <div class="ordered-image red">
+                <img src="./img/university-solid.svg" alt="University">
+                <span class="red">3</span>
+            </div>
+            <h1 style="color:#E05E46 ;">Sales alignment</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet molestias, dolorum similique reprehenderit laborum rem porro eligendi sequi, ullam fugit saepe dignissimos consequuntur! Corrupti, inventore. </p>
+        </div>
+        <div class="container">
+            <div class="ordered-image grey">
+                <img src="./img/users-solid.svg" alt="Users">
+                <span class="grey">4</span>
+            </div>
+            <h1 style="color: #919191;">Campaign strategy</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet molestias, dolorum similique reprehenderit laborum rem porro eligendi sequi, ullam fugit saepe dignissimos consequuntur! Corrupti, inventore. </p>
+        </div>
 </body>
 </html>
